# NovaMPC

./: Cargo.toml  LICENSE  README.md  benchmark_results.txt
benches/: mpcith_bench.rs
src/: circuit.rs  commitment.rs  error.rs  fiat_shamir.rs  lib.rs  merkle.rs  mimc.rs  mpc.rs  params.rs  predicate.rs  proof.rs  seed_tree.rs  sharing.rs  tx_validation.rs
tests/: integration.rs
